Update title and improve order button text

--- a/abocados/index.html
+++ b/abocados/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>A Bocados - Pedido Oficial</title>
+    <title>A Bocados - Carta Completa</title>
     <style>
         :root { --fucsia: #d81b60; --oscuro: #1a1a1a; --gris: #2d2d2d; --blanco: #ffffff; --verde: #25d366; }
         body { font-family: 'Segoe UI', sans-serif; margin: 0; background: var(--oscuro); color: var(--blanco); padding-bottom: 200px; }
@@ -17,20 +17,20 @@
         .item { display: flex; gap: 10px; padding: 12px 0; border-bottom: 1px solid #333; align-items: flex-start; }
         .item-info { flex: 1; }
         .item-nombre { font-weight: bold; font-size: 14px; color: var(--blanco); }
-        .item-desc { font-size: 10px; color: #aaa; margin-top: 2px; line-height: 1.2; }
-        .item-precio { font-size: 13px; color: var(--fucsia); font-weight: bold; margin-top: 4px; }
-        .controles-cant { display: flex; align-items: center; gap: 8px; flex-shrink: 0; margin-top: 5px; background: #111; padding: 5px 10px; border-radius: 50px; }
-        .btn-cant { background: var(--fucsia); border: none; color: white; width: 30px; height: 30px; border-radius: 50%; font-weight: bold; cursor: pointer; }
+        .item-desc { font-size: 10px; color: #aaa; margin-top: 4px; line-height: 1.3; }
+        .item-precio { font-size: 13px; color: var(--fucsia); font-weight: bold; margin-top: 6px; }
+        .controles-cant { display: flex; align-items: center; gap: 10px; flex-shrink: 0; margin-top: 10px; background: #111; padding: 5px 10px; border-radius: 50px; }
+        .btn-cant { background: var(--fucsia); border: none; color: white; width: 28px; height: 28px; border-radius: 50%; font-weight: bold; cursor: pointer; }
         .input-cant { width: 30px; text-align: center; font-weight: bold; background: none; border: none; color: white; font-size: 16px; }
         .total-sticky { position: fixed; bottom: 0; left: 0; width: 100%; background: #000; border-top: 4px solid var(--fucsia); padding: 15px; box-sizing: border-box; z-index: 1002; }
-        .btn-enviar { background: var(--verde); color: white; border: none; padding: 18px; border-radius: 15px; width: 100%; font-size: 18px; font-weight: bold; cursor: pointer; }
+        .btn-enviar { background: var(--verde); color: white; border: none; padding: 18px; border-radius: 15px; width: 100%; font-size: 18px; font-weight: bold; cursor: pointer; box-shadow: 0 4px 0 #128c7e; }
     </style>
 </head>
 <body>
 
 <header>
     <img src="aboados.PNG" class="logo-img">
-    <div style="font-size: 11px; color: #aaa;">Domicilios: 304 615 2985</div>
+    <div style="font-size: 11px; color: #aaa;">Menú 100% Completo - Caucasia</div>
 </header>
 
 <div class="container">
@@ -51,7 +51,7 @@
             <option value="Nequi">Nequi</option>
             <option value="Bancolombia">Ahorro a la mano</option>
         </select>
-        <textarea id="obs" class="form-input" style="height: 60px;" placeholder="Notas: (Ej: Sin cebolla, portería...)"></textarea>
+        <textarea id="obs" class="form-input" style="height: 50px;" placeholder="Ej: Sin cebolla, portería..."></textarea>
     </div>
 
     <div id="contenedor-menu"></div>
@@ -62,56 +62,76 @@
         <span>TOTAL:</span>
         <span style="color: var(--fucsia); font-size: 22px;">$<span id="cuenta-total">0</span></span>
     </div>
-    <button class="btn-enviar" onclick="enviarPedido()">🚀 ENVIAR PEDIDO</button>
+    <button class="btn-enviar" onclick="enviarPedido()">🚀 ENVIAR PEDIDO POR WHATSAPP</button>
 </div>
 
 <script>
     const menu = {
         "ENTRADAS": [
-            {n: "Ceviche de Chicharrón", p: 25000, d: "Chicharrón, cebolla, limón y patacones."},
+            {n: "Ceviche de Chicharrón", p: 25000, d: "Chicharrón crocante, cebolla morada, tomate, limón y patacones."},
             {n: "Papas con Tocineta", p: 13000, d: "Papas francesas, queso costeño y panceta."},
             {n: "Patacones Carne y Guacamole", p: 15000, d: "Carne molida en salsa y guacamole."},
-            {n: "Porción de Patacón (4)", p: 6000}, {n: "Porción de Papa Francesa", p: 6000}
+            {n: "Porción de Patacón (4)", p: 6000},
+            {n: "Porción de Papa Francesa", p: 6000}
         ],
-        "BURGERS NUEVAS": [
-            {n: "Sweet Bacon", p: 32000, d: "Res 146g, mermelada tocineta, philadelphia."},
-            {n: "Doble Americana", p: 26000, d: "Doble carne 100g, doble cheddar."},
-            {n: "Orgasmics", p: 29000, d: "Res 146g, piña caramelizada, chicharrón frito."},
+        "BURGER NUEVAS": [
+            {n: "Sweet Bacon", p: 32000, d: "146g res, mermelada tocineta, philadelphia, cheddar."},
+            {n: "Doble Americana", p: 26000, d: "Doble carne 100g, doble cheddar, pepinillos."},
+            {n: "Orgasmics", p: 29000, d: "146g res, piña caramelizada, chicharrón frito."},
             {n: "Doble Crispy", p: 29000, d: "Doble pollo crispy, doble mozzarella."},
-            {n: "Pulled Pork", p: 28000, d: "Costilla desmechada, res 146g."},
-            {n: "Ambrosia", p: 32000, d: "Res 140g, costilla desmechada, chips yuca."},
-            {n: "Triple M", p: 32000, d: "Res 146g, pops pechuga, BBQ corozo."},
-            {n: "Pinchada", p: 31000, d: "Res, chicharrones, huevo, BBQ."},
-            {n: "Pollo Crispy", p: 29000}, {n: "Super Bacon", p: 29000}
+            {n: "Pulled Pork", p: 28000, d: "Costilla desmechada BBQ, 146g res."},
+            {n: "Ambrosia", p: 32000, d: "Res 140g, costilla desmechada, chips de yuca."},
+            {n: "Triple M", p: 32000, d: "146g res, pops pechuga, philadelphia, BBQ corozo."},
+            {n: "Pinchada", p: 31000, d: "Res, chicharrones, huevo frito, mozzarella, cebolla BBQ."},
+            {n: "Pollo Crispy", p: 29000, d: "Pechuga apanada, carne res, mozzarella y BBQ."},
+            {n: "Super Bacon", p: 29000, d: "Carne 140g, mozzarella, 4 lonjas de tocineta."}
         ],
-        "BURGERS CLÁSICAS": [
-            {n: "De la Casa", p: 23500}, {n: "Mexicana", p: 27500}, {n: "Mixta", p: 28000},
-            {n: "Americana", p: 25500}, {n: "Street Burger", p: 16000}, {n: "Original", p: 12000},
-            {n: "Doble Carne Clásica", p: 33500}
+        "BURGER CLÁSICAS": [
+            {n: "Mexicana", p: 27500, d: "Res 140g, carne desmechada, guacamole, jalapeños."},
+            {n: "Mixta", p: 28000, d: "Res 140g, pollo desmechado, aritos de cebolla."},
+            {n: "De la Casa", p: 23500, d: "Res 140g sellada mantequilla, mozzarella, tocineta."},
+            {n: "Americana", p: 25500, d: "Res 140g, pan sellado mantequilla, vegetales."},
+            {n: "Street Burger", p: 16000, d: "Carne 100g, mozzarella y vegetales."},
+            {n: "Original", p: 12000, d: "Carne 90g, mozzarella y vegetales."},
+            {n: "Doble Carne", p: 33500, d: "Doble res 140g, tocineta, doble mozzarella."}
+        ],
+        "PERROS CALIENTES": [
+            {n: "Sweet Dog", p: 27000, d: "Salchicha americana, cheddar fundido, mermelada tocineta."},
+            {n: "Americano", p: 22000, d: "Salchicha americana, pepinillos, tocineta."},
+            {n: "Chicken Dog", p: 24000, d: "Pollo desmechado, tártara, tocineta, cheddar."},
+            {n: "Perro Sencillo", p: 12000, d: "Salchicha, ripio de papa y salsas."}
         ],
         "PARRILLA Y PICADAS": [
-            {n: "Costichi", p: 43000}, {n: "Costillas BBQ", p: 43000}, {n: "Chuzo de Pollo", p: 25000},
-            {n: "Picada Especial", p: 40000}, {n: "Picada Familiar", p: 65000}, {n: "Picada de la Casa", p: 35000}
+            {n: "Costichi", p: 43000, d: "400g costilla-chicharrón al carbón."},
+            {n: "Costillas BBQ", p: 43000, d: "500g costillas horneadas salsa BBQ."},
+            {n: "Chuzo de Pollo", p: 25000, d: "Pechuga al carbón con papa o patacón."},
+            {n: "Picada Especial (2 pers)", p: 40000},
+            {n: "Picada Familiar (4 pers)", p: 65000},
+            {n: "Picada de la Casa", p: 35000}
         ],
-        "SALCHIPAPAS": [
-            {n: "Especial Personal", p: 22000}, {n: "Mixta Personal", p: 18000}, {n: "Papas de la Casa", p: 22000},
-            {n: "Salchipapa Sencilla", p: 12000}, {n: "Salchipapa Especial", p: 18000}, {n: "Papas Gratinadas", p: 16000}
+        "PAPAS Y SALCHIPAPAS": [
+            {n: "Papas de la Casa", p: 22000, d: "Carne, pollo, guacamole, pico de gallo y salsa agria."},
+            {n: "Especial Personal", p: 22000, d: "Salchicha ranchera, mozzarella, tocineta, aro cebolla."},
+            {n: "Mixta Personal", p: 18000, d: "Carne, pollo, maicitos, tocineta y queso costeño."},
+            {n: "Salchipapa Especial", p: 18000},
+            {n: "Salchipapa Sencilla", p: 12000},
+            {n: "Papas Gratinadas Pollo", p: 16000},
+            {n: "Papas Gratinadas Carne", p: 16000}
         ],
         "ADICIONALES": [
-            {n: "Tocineta", p: 4000}, {n: "Extra Queso", p: 3000}, {n: "Huevo", p: 2000},
-            {n: "Carne 140g", p: 8000}, {n: "Pollo", p: 5000}, {n: "Guacamole", p: 4000}
+            {n: "Tocineta", p: 4000}, {n: "Extra Queso", p: 3000}, {n: "Huevo frito", p: 2000},
+            {n: "Carne 140g", p: 8000}, {n: "Pollo desmechado", p: 5000}, {n: "Guacamole", p: 4000}
+        ],
+        "CERVEZAS": [
+            {n: "Stella Artois", p: 8000}, {n: "Corona", p: 8000}, {n: "Aguila Light Lata", p: 6500},
+            {n: "Aguila Negra Lata", p: 6500}, {n: "Coronita", p: 6000}, {n: "Club Colombia", p: 6000},
+            {n: "Costeñita", p: 4500}, {n: "Cola y Pola (Refajo)", p: 5000}
         ],
         "BEBIDAS": [
             {n: "Limonada Coco", p: 13000}, {n: "Limonada Cerezada", p: 8000}, {n: "Limonada Natural", p: 5000},
-            {n: "Jugo Hit 500ml", p: 5000}, {n: "Te Hatsu", p: 8000}, {n: "Kola Roman 400ml", p: 5000},
-            {n: "Sprite 400ml", p: 5000}, {n: "Coca Cola 400ml", p: 5000}, {n: "Coca Cola Cero 400ml", p: 5000},
-            {n: "Coca Cola 1.5L", p: 11000}, {n: "Postobon 1.5L", p: 8000}, {n: "Postobon 400ml", p: 5000},
-            {n: "Agua Brisa 600ml", p: 3000}, {n: "Milo Frio", p: 9000}, {n: "Malteada", p: 12000}
-        ],
-        "CERVEZAS": [
-            {n: "Stella Artois", p: 8000}, {n: "Corona", p: 8000}, {n: "Coronita", p: 6000},
-            {n: "Aguila Light Lata", p: 6500}, {n: "Aguila Negra Lata", p: 6500},
-            {n: "Club Colombia", p: 6000}, {n: "Costeñita", p: 4500}, {n: "Cola y Pola", p: 5000}
+            {n: "Jugo Natural Agua", p: 7000}, {n: "Jugo Natural Leche", p: 9000}, {n: "Milo Frio", p: 9000},
+            {n: "Coca Cola 1.5L", p: 11000}, {n: "Postobon 1.5L", p: 8000}, {n: "Coca Cola 400ml", p: 5000},
+            {n: "Sprite 400ml", p: 5000}, {n: "Te Hatsu", p: 8000}, {n: "Agua Brisa 600ml", p: 3000}
         ]
     };
 
@@ -125,6 +145,7 @@
                     <div class="item">
                         <div class="item-info">
                             <div class="item-nombre">${item.n}</div>
+                            <div class="item-desc">${item.d || ""}</div>
                             <div class="item-precio">$${item.p.toLocaleString()}</div>
                         </div>
                         <div class="controles-cant">
@@ -157,48 +178,43 @@
     }
 
     function enviarPedido() {
-        const nom = document.getElementById('nombre').value.trim();
-        const cel = document.getElementById('celular').value.trim();
-        const dir = document.getElementById('direccion').value.trim();
-        const obs = document.getElementById('obs').value.trim();
-        const pago = document.getElementById('pago').value;
+        const nom = document.getElementById('nombre').value;
+        const cel = document.getElementById('celular').value;
+        const dir = document.getElementById('direccion').value;
         const total = document.getElementById('cuenta-total').innerText;
         const domiVal = parseInt(document.getElementById('zona-domicilio').value);
 
-        if(!nom || !cel || !dir || total === "0") return alert("Socio, por favor completa tus datos.");
+        if(!nom || !cel || !dir || total === "0") return alert("Por favor completa tus datos.");
 
         localStorage.setItem('abocados_user', JSON.stringify({n: nom, c: cel, d: dir}));
 
         navigator.geolocation.getCurrentPosition((pos) => {
             const gps = `https://www.google.com/maps?q=${pos.coords.latitude},${pos.coords.longitude}`;
-            let msg = `*🍔 A BOCADOS - NUEVO PEDIDO*\n`;
+            let msg = `*🍔 A BOCADOS - PEDIDO REALIZADO*\n`;
             msg += `👤 *CLIENTE:* ${nom}\n📞 *CEL:* ${cel}\n📍 *DIR:* ${dir}\n`;
             msg += `--------------------------------\n`;
             document.querySelectorAll('.input-cant').forEach(i => {
                 const cant = parseInt(i.value);
                 if(cant > 0) {
                     const sub = cant * parseInt(i.dataset.p);
-                    msg += `🔹 ${i.dataset.n} (x${cant}) = *$${sub.toLocaleString()}*\n`;
+                    msg += `🔹 ${i.dataset.n} (${cant}) = *$${sub.toLocaleString()}*\n`;
                 }
             });
             msg += `--------------------------------\n`;
-            msg += `🛵 *DOMI:* $${domiVal.toLocaleString()}\n💰 *TOTAL FINAL: $${total}*\n`;
-            msg += `💳 *PAGO:* ${pago}\n`;
-            if(obs) msg += `📝 *OBS:* ${obs}\n`;
+            msg += `🛵 *DOMICILIO:* $${domiVal.toLocaleString()}\n💰 *TOTAL FINAL: $${total}*\n`;
             msg += `📍 *GPS:* ${gps}\n`;
-            
-            // EL NÚMERO YA ESTÁ ACTUALIZADO AQUÍ ABAJO
+            msg += `_App de Vibras Positivas_`;
             window.location.href = `https://wa.me/573046152985?text=${encodeURIComponent(msg)}`;
         });
     }
 
     window.onload = () => {
         cargarMenu();
-        const saved = JSON.parse(localStorage.getItem('abocados_user'));
-        if(saved) {
-            document.getElementById('nombre').value = saved.n;
-            document.getElementById('celular').value = saved.c;
-            document.getElementById('direccion').value = saved.d;
+        const data = JSON.parse(localStorage.getItem('abocados_user'));
+        if(data) {
+            document.getElementById('nombre').value = data.n;
+            document.getElementById('celular').value = data.c;
+            document.getElementById('direccion').value = data.d;
         }
     };
 </script>
