--- a/rekefood/index.html
+++ b/rekefood/index.html
@@ -1,1 +1,147 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>REKE FOOD - Pedidos</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body {
+            background-image: url('https://i.imgur.com/TuLogotipoAqui.png'); /* Reemplazar con el link de tu logo */
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 60%;
+            background-color: rgba(255, 255, 255, 0.92);
+            background-blend-mode: overlay;
+        }
+        .boton-flotante {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #f97316; /* Naranja */
+            color: white;
+            padding: 15px 25px;
+            border-radius: 50px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+            font-weight: bold;
+            z-index: 100;
+        }
+    </style>
+</head>
+<body class="p-4 md:p-8">
 
+    <header class="text-center mb-8">
+        <h1 class="text-4xl font-extrabold text-red-700">REKE FOOD</h1>
+        <p class="text-gray-600 font-semibold">Comidas Rápidas - Colinas del Portal</p>
+    </header>
+
+    <section class="max-w-md mx-auto bg-white p-6 rounded-xl shadow-lg mb-8 border-t-4 border-orange-500">
+        <h2 class="text-xl font-bold mb-4 border-b pb-2">Datos de Entrega</h2>
+        <div class="space-y-4">
+            <input type="text" id="nombre" placeholder="Nombre completo" class="w-full p-2 border rounded">
+            <input type="text" id="direccion" placeholder="Dirección exacta" class="w-full p-2 border rounded">
+            <input type="tel" id="celular" placeholder="Celular" class="w-full p-2 border rounded">
+            <select id="forma_pago" class="w-full p-2 border rounded">
+                <option value="Efectivo">Efectivo</option>
+                <option value="Nequi/Daviplata">Nequi / Daviplata</option>
+                <option value="Datafono">Datáfono</option>
+            </select>
+            <textarea id="observaciones" placeholder="Observaciones (sin cebolla, etc.)" class="w-full p-2 border rounded"></textarea>
+        </div>
+    </section>
+
+    <section class="max-w-4xl mx-auto mb-24">
+        <h2 class="text-2xl font-bold text-center mb-6 bg-red-600 text-white py-2 rounded">NUESTRA CARTA</h2>
+        
+        <div id="menu-container" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            </div>
+    </section>
+
+    <button onclick="enviarPedido()" class="boton-flotante" id="btn-total">
+        Ver Pedido: $0
+    </button>
+
+    <footer class="text-center text-xs text-gray-500 mt-10">
+        <p>Desarrollada por App Vibras Positivas © Todos los derechos reservados</p>
+    </footer>
+
+    <script>
+        const productos = [
+            { id: 1, nombre: "Hamburguesa Sencilla", precio: 12000, cat: "Hamburguesas" },
+            { id: 2, nombre: "Hamburguesa Doble Carne", precio: 18000, cat: "Hamburguesas" },
+            { id: 3, nombre: "Perro Caliente Especial", precio: 10000, cat: "Perros" },
+            { id: 4, nombre: "Salchipapa Familiar", precio: 25000, cat: "Salchipapas" },
+            // Aquí agregaré el 100% de la lista de tus imágenes
+        ];
+
+        let carrito = {};
+
+        function renderMenu() {
+            const container = document.getElementById('menu-container');
+            container.innerHTML = productos.map(p => `
+                <div class="bg-white p-4 rounded-lg shadow flex justify-between items-center border-l-4 border-red-500">
+                    <div>
+                        <h3 class="font-bold">${p.nombre}</h3>
+                        <p class="text-green-600 font-bold">$${p.precio.toLocaleString()}</p>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <button onclick="updateCant(${p.id}, -1)" class="bg-gray-200 px-3 py-1 rounded">-</button>
+                        <span id="cant-${p.id}" class="font-bold text-lg">0</span>
+                        <button onclick="updateCant(${p.id}, 1)" class="bg-orange-500 text-white px-3 py-1 rounded">+</button>
+                    </div>
+                </div>
+            `).join('');
+        }
+
+        function updateCant(id, cambio) {
+            carrito[id] = (carrito[id] || 0) + cambio;
+            if (carrito[id] < 0) carrito[id] = 0;
+            document.getElementById(`cant-${id}`).innerText = carrito[id];
+            calcularTotal();
+        }
+
+        function calcularTotal() {
+            let total = 0;
+            productos.forEach(p => {
+                total += (carrito[p.id] || 0) * p.precio;
+            });
+            document.getElementById('btn-total').innerText = `Enviar Pedido: $${total.toLocaleString()}`;
+        }
+
+        function enviarPedido() {
+            const nombre = document.getElementById('nombre').value;
+            const direccion = document.getElementById('direccion').value;
+            if(!nombre || !direccion) return alert("Por favor llena tus datos de envío");
+
+            let detalle = "🍔 *PEDIDO REKE FOOD* 🍔\n\n";
+            detalle += `👤 Cliente: ${nombre}\n`;
+            detalle += `📍 Dirección: ${direccion}\n`;
+            detalle += `📱 Cel: ${document.getElementById('celular').value}\n`;
+            detalle += `💳 Pago: ${document.getElementById('forma_pago').value}\n`;
+            detalle += `--------------------------\n`;
+
+            let total = 0;
+            productos.forEach(p => {
+                if(carrito[p.id] > 0) {
+                    let sub = carrito[p.id] * p.precio;
+                    detalle += `${carrito[p.id]}x ${p.nombre} - $${sub.toLocaleString()}\n`;
+                    total += sub;
+                }
+            });
+
+            if(total === 0) return alert("El carrito está vacío");
+
+            detalle += `--------------------------\n`;
+            detalle += `*TOTAL A PAGAR: $${total.toLocaleString()}*\n\n`;
+            detalle += `📝 Obs: ${document.getElementById('observaciones').value}\n\n`;
+            detalle += `🚀 _Desarrollada por App Vibras Positivas_`;
+
+            const wpUrl = `https://wa.me/573207293667?text=${encodeURIComponent(detalle)}`;
+            window.open(wpUrl, '_blank');
+        }
+
+        renderMenu();
+    </script>
+</body>
+</html>
