--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <a href="./arepadonhuevo/index.html" class="btn-cajon">🥗 Arepa don Huevo</a>
         <a href="./dulcebocadopostresycafe/index.html" class="btn-cajon">🥗 Dulce Bocado Postres y Cafe</a>
         <a href="./abocados/index.html" class="btn-cajon">🥗 A Bocados</a>
+        <a href="./rekefood/index.html" class="btn-cajon">🥗 Reke Food</a>
         
         <div class="categoria">Tiendas y Mercados</div>
         <a href="./tienda-azul/index.html" class="btn-cajon">🔵 Tienda Azul</a>
