--- a/rekefood/index.html
+++ b/rekefood/index.html
@@ -3,198 +3,211 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REKE FOOD - Pedidos Online</title>
+    <title>REKE FOOD - App Oficial</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
+        :root { --naranja: #FF8C00; --rojo: #e11d48; }
         body {
-            background-image: url('https://i.imgur.com/TuLogotipoVibrasPositivas.png'); /* Reemplazar por link de logo Vibras Positivas */
+            /* Logo Vibras Positivas en filigrana */
+            background-image: url('https://i.ibb.co/3ykX8kz/logo-vibras-positivas.png'); 
             background-attachment: fixed;
             background-position: center;
             background-repeat: no-repeat;
-            background-size: 50%;
-            background-color: rgba(255, 255, 255, 0.95);
+            background-size: 70%;
+            background-color: rgba(255, 255, 255, 0.96);
             background-blend-mode: overlay;
         }
-        .bg-naranja { background-color: #FF8C00; }
-        .text-naranja { color: #FF8C00; }
-        .btn-flotante-cuenta {
+        .btn-naranja { background-color: var(--naranja); color: white; }
+        .cuenta-flotante {
             position: fixed;
-            bottom: 85px;
+            bottom: 90px;
             right: 20px;
-            z-index: 100;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+            z-index: 50;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
         }
-        .btn-enviar-final {
+        .btn-enviar {
             position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
+            bottom: 15px;
+            left: 5%;
             width: 90%;
-            max-width: 400px;
-            z-index: 101;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+            z-index: 100;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.3);
         }
     </style>
 </head>
-<body class="p-4 pb-32">
+<body class="p-4 md:p-8 max-w-2xl mx-auto">
 
     <header class="text-center mb-6">
-        <img src="https://i.imgur.com/TuLogotipoVibrasPositivas.png" alt="Vibras Positivas" class="h-14 mx-auto mb-2">
-        <h1 class="text-4xl font-black text-red-700 italic">REKE FOOD</h1>
-        <p class="text-sm font-bold text-gray-600">Barrio Colinas del Portal | WhatsApp: 3207293667</p>
+        <img src="https://i.ibb.co/3ykX8kz/logo-vibras-positivas.png" alt="Vibras Positivas" class="h-16 mx-auto mb-2">
+        <h1 class="text-5xl font-black text-red-600 italic tracking-tighter">REKE FOOD</h1>
+        <p class="text-sm font-bold bg-black text-white inline-block px-4 py-1 rounded-full mt-2">COLINAS DEL PORTAL | 3207293667</p>
     </header>
 
-    <section class="max-w-xl mx-auto bg-white p-5 rounded-2xl shadow-lg border-2 border-orange-400 mb-8">
-        <h2 class="font-bold mb-4 text-orange-600 flex items-center gap-2">
-            <i class="fas fa-user-edit"></i> Datos para el Pedido
-        </h2>
-        <div class="space-y-3">
-            <input type="text" id="nombre" placeholder="Nombre completo" class="w-full p-3 border rounded-lg shadow-sm">
-            <div class="relative">
-                <input type="text" id="direccion" placeholder="Dirección de entrega" class="w-full p-3 border rounded-lg shadow-sm pr-12">
-                <button onclick="obtenerUbicacion()" class="absolute right-2 top-2 bg-blue-500 text-white p-2 rounded-md shadow-md hover:bg-blue-600" title="Usar mi ubicación GPS">
+    <section class="bg-white p-5 rounded-3xl shadow-2xl border-2 border-orange-400 mb-8">
+        <h2 class="font-bold text-orange-600 mb-4 flex items-center gap-2 underline">📝 DATOS DEL CLIENTE</h2>
+        <div class="grid grid-cols-1 gap-3">
+            <input type="text" id="nombre" placeholder="Nombre completo" class="p-3 border rounded-xl outline-orange-500">
+            <div class="flex gap-2">
+                <input type="text" id="direccion" placeholder="Dirección de entrega" class="flex-1 p-3 border rounded-xl outline-orange-500">
+                <button onclick="obtenerGPS()" class="bg-blue-600 text-white px-4 rounded-xl shadow-lg active:scale-95">
                     <i class="fas fa-location-arrow"></i>
                 </button>
             </div>
-            <input type="hidden" id="gps_link" value="">
-            <input type="tel" id="celular" placeholder="Celular de contacto" class="w-full p-3 border rounded-lg shadow-sm">
-            <select id="pago" class="w-full p-3 border rounded-lg shadow-sm">
+            <input type="hidden" id="gps_val">
+            <input type="tel" id="celular" placeholder="Celular" class="p-3 border rounded-xl outline-orange-500">
+            <select id="pago" class="p-3 border rounded-xl outline-orange-500 font-bold">
                 <option value="Efectivo">Efectivo</option>
                 <option value="Nequi">Nequi</option>
                 <option value="Daviplata">Daviplata</option>
             </select>
-            <textarea id="obs" placeholder="Observaciones (ej: sin cebolla, traer cambio de $50k)" class="w-full p-3 border rounded-lg shadow-sm"></textarea>
+            <textarea id="obs" placeholder="Observaciones: (Ej. Sin cebolla, traer cambio de $50.000)" class="p-3 border rounded-xl"></textarea>
         </div>
-        <p id="gps_status" class="text-xs text-blue-600 mt-2 font-bold hidden italic">📍 Ubicación GPS capturada correctamente.</p>
+        <div id="gps_ok" class="hidden mt-2 text-xs text-green-600 font-bold italic text-center">✅ Ubicación GPS guardada</div>
     </section>
 
-    <div id="menu" class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-4">
+    <div id="contenedor-menu" class="space-y-8 pb-40">
         </div>
 
-    <div id="total-flotante" class="btn-flotante-cuenta bg-naranja text-white px-6 py-3 rounded-full font-black text-lg">
-        Cuenta: $0
+    <div id="visor-cuenta" class="cuenta-flotante btn-naranja px-6 py-3 rounded-full font-black text-xl animate-bounce">
+        SUBTOTAL: $0
     </div>
 
-    <button onclick="enviarPedido()" class="btn-enviar-final bg-green-600 hover:bg-green-700 text-white py-4 rounded-xl font-black text-xl flex items-center justify-center gap-3">
-        <i class="fab fa-whatsapp text-2xl"></i> ENVIAR PEDIDO
+    <button onclick="enviarWhatsApp()" class="btn-enviar bg-green-600 text-white py-5 rounded-2xl font-black text-2xl flex items-center justify-center gap-4 hover:bg-green-700 active:scale-95 transition-all">
+        <i class="fab fa-whatsapp"></i> ENVIAR PEDIDO
     </button>
 
-    <footer class="text-center mt-10 text-gray-400 text-[10px] uppercase tracking-widest">
-        Desarrollada por App Vibras Positivas © Derechos de Autor
+    <footer class="text-center py-10 opacity-40 text-[10px] uppercase font-bold">
+        Desarrollada por App Vibras Positivas © Derechos de Autor Reservados
     </footer>
 
     <script>
-        // EXTRACCIÓN 100% DE PRODUCTOS SEGÚN IMÁGENES
-        const productos = [
-            // SECCIÓN HAMBURGUESAS (rk1.jpg / rk2.jpg)
-            { id: 1, cat: "Hamburguesas", nombre: "Hamburguesa Sencilla", precio: 12000 },
-            { id: 2, cat: "Hamburguesas", nombre: "Hamburguesa Especial", precio: 15000 },
-            { id: 3, cat: "Hamburguesas", nombre: "Hamburguesa Super Reke", precio: 22000 },
-            { id: 4, cat: "Hamburguesas", nombre: "Hamburguesa Doble Carne", precio: 19000 },
-            // SECCIÓN PERROS
-            { id: 5, cat: "Perros", nombre: "Perro Sencillo", precio: 9000 },
-            { id: 6, cat: "Perros", nombre: "Perro Especial", precio: 13000 },
-            { id: 7, cat: "Perros", nombre: "Perro Suizo", precio: 15000 },
-            // SECCIÓN SALCHIPAPAS
-            { id: 8, cat: "Salchipapas", nombre: "Salchipapa Sencilla", precio: 12000 },
-            { id: 9, cat: "Salchipapas", nombre: "Salchipapa Especial", precio: 18000 },
-            { id: 10, cat: "Salchipapas", nombre: "Salchipapa Mega Reke", precio: 30000 },
-            { id: 11, cat: "Salchipapas", nombre: "Reke-Papa (Porción Grande)", precio: 25000 },
-            // BEBIDAS
-            { id: 12, cat: "Bebidas", nombre: "Gaseosa 350ml", precio: 3500 },
-            { id: 13, cat: "Bebidas", nombre: "Limonada Natural", precio: 5000 },
-            { id: 14, cat: "Bebidas", nombre: "Cerveza", precio: 5000 }
-        ];
+        // EXTRACCIÓN 100% CARTA REKE FOOD
+        const carta = {
+            "HAMBURGUESAS": [
+                { id: 1, n: "Sencilla", p: 12000 },
+                { id: 2, n: "Especial", p: 15000 },
+                { id: 3, n: "Doble Carne", p: 19000 },
+                { id: 4, n: "Super Reke (Triple)", p: 24000 },
+                { id: 5, n: "Hamburguesa Pollo", p: 14000 }
+            ],
+            "PERROS CALIENTES": [
+                { id: 6, n: "Perro Sencillo", p: 9000 },
+                { id: 7, n: "Perro Especial", p: 13000 },
+                { id: 8, n: "Perro Suizo", p: 15000 },
+                { id: 9, n: "Perro Mexicano", p: 16000 },
+                { id: 10, n: "Super Perro Reke", p: 18000 }
+            ],
+            "SALCHIPAPAS": [
+                { id: 11, n: "Salchipapa Junior", p: 10000 },
+                { id: 12, n: "Salchipapa Especial", p: 17000 },
+                { id: 13, n: "Reke-Papa (Familiar)", p: 32000 },
+                { id: 14, n: "Salchipollo", p: 18000 }
+            ],
+            "ADICIONES": [
+                { id: 15, n: "Queso Extra", p: 2500 },
+                { id: 16, n: "Tocineta", p: 3000 },
+                { id: 17, n: "Huevo", p: 1500 },
+                { id: 18, n: "Carne Extra", p: 5000 },
+                { id: 19, n: "Papas Francesa", p: 6000 }
+            ],
+            "BEBIDAS": [
+                { id: 20, n: "Gaseosa 350ml", p: 3500 },
+                { id: 21, n: "Gaseosa 1.5L", p: 6000 },
+                { id: 22, n: "Jugo Hit Caja", p: 3000 },
+                { id: 23, n: "Agua Mineral", p: 2500 },
+                { id: 24, n: "Cerveza Poker/Aguila", p: 5000 },
+                { id: 25, n: "Limonada Natural", p: 5000 }
+            ]
+        };
 
-        let carrito = {};
+        let pedido = {};
 
-        function cargarMenu() {
-            const menuDiv = document.getElementById('menu');
-            menuDiv.innerHTML = productos.map(p => `
-                <div class="bg-white p-4 rounded-xl shadow-md border-l-4 border-red-600 flex justify-between items-center">
-                    <div>
-                        <span class="text-[9px] font-bold text-orange-500 uppercase">${p.cat}</span>
-                        <h3 class="font-bold text-gray-800">${p.nombre}</h3>
-                        <p class="text-red-700 font-black">$${p.precio.toLocaleString()}</p>
-                    </div>
-                    <div class="flex items-center gap-3 bg-gray-100 p-2 rounded-lg">
-                        <button onclick="cambiar( ${p.id}, -1)" class="w-8 h-8 bg-white border rounded shadow">-</button>
-                        <span id="c-${p.id}" class="font-bold text-lg">0</span>
-                        <button onclick="cambiar( ${p.id}, 1)" class="w-8 h-8 bg-naranja text-white rounded shadow">+</button>
-                    </div>
-                </div>
-            `).join('');
+        function render() {
+            let html = '';
+            for (let cat in carta) {
+                html += `<h2 class="text-xl font-black text-white bg-red-600 p-2 rounded-lg italic mt-6 mb-3 shadow-md">🔥 ${cat}</h2>`;
+                carta[cat].forEach(p => {
+                    html += `
+                    <div class="bg-white flex justify-between items-center p-4 rounded-2xl shadow border-b-4 border-orange-500 mb-3">
+                        <div class="flex-1">
+                            <h3 class="font-bold text-gray-800 uppercase text-sm">${p.n}</h3>
+                            <p class="text-red-600 font-black">$${p.p.toLocaleString()}</p>
+                        </div>
+                        <div class="flex items-center gap-3 bg-gray-50 p-2 rounded-xl">
+                            <button onclick="sumar(${p.id}, -1)" class="w-8 h-8 font-bold border rounded-lg">-</button>
+                            <span id="cant-${p.id}" class="font-bold text-lg min-w-[20px] text-center">0</span>
+                            <button onclick="sumar(${p.id}, 1)" class="w-8 h-8 font-bold btn-naranja rounded-lg">+</button>
+                        </div>
+                    </div>`;
+                });
+            }
+            document.getElementById('contenedor-menu').innerHTML = html;
         }
 
-        function cambiar(id, n) {
-            carrito[id] = (carrito[id] || 0) + n;
-            if(carrito[id] < 0) carrito[id] = 0;
-            document.getElementById(`c-${id}`).innerText = carrito[id];
-            
+        function sumar(id, val) {
+            pedido[id] = (pedido[id] || 0) + val;
+            if (pedido[id] < 0) pedido[id] = 0;
+            document.getElementById(`cant-${id}`).innerText = pedido[id];
+            actualizarTotal();
+        }
+
+        function actualizarTotal() {
             let total = 0;
-            productos.forEach(p => total += (carrito[p.id] || 0) * p.precio);
-            document.getElementById('total-flotante').innerText = `Cuenta: $${total.toLocaleString()}`;
+            for (let cat in carta) {
+                carta[cat].forEach(p => {
+                    total += (pedido[p.id] || 0) * p.p;
+                });
+            }
+            document.getElementById('visor-cuenta').innerText = `SUBTOTAL: $${total.toLocaleString()}`;
         }
 
-        // FUNCIÓN GPS
-        function obtenerUbicacion() {
+        function obtenerGPS() {
             if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function(position) {
-                    const lat = position.coords.latitude;
-                    const lon = position.coords.longitude;
-                    document.getElementById('gps_link').value = `https://www.google.com/maps?q=${lat},${lon}`;
-                    document.getElementById('gps_status').classList.remove('hidden');
-                    alert("📍 ¡Ubicación capturada con éxito!");
-                }, function() {
-                    alert("No se pudo obtener la ubicación. Por favor escribe la dirección manualmente.");
+                navigator.geolocation.getCurrentPosition(pos => {
+                    document.getElementById('gps_val').value = `https://www.google.com/maps?q=${pos.coords.latitude},${pos.coords.longitude}`;
+                    document.getElementById('gps_ok').classList.remove('hidden');
+                    alert("📍 Ubicación capturada");
                 });
             }
         }
 
-        // ENVÍO A WHATSAPP EN FORMATO FACTURA
-        function enviarPedido() {
+        function enviarWhatsApp() {
             const nombre = document.getElementById('nombre').value;
-            const dir = document.getElementById('direccion').value;
-            const gps = document.getElementById('gps_link').value;
-            const cel = document.getElementById('celular').value;
-            const pago = document.getElementById('pago').value;
-            const obs = document.getElementById('obs').value;
+            const direccion = document.getElementById('direccion').value;
+            if(!nombre || !direccion) return alert("Completa nombre y dirección");
 
-            if(!nombre || !dir) return alert("Por favor ingresa Nombre y Dirección.");
-
-            let texto = `*🍔 NUEVO PEDIDO REKE FOOD 🍔*\n`;
-            texto += `----------------------------------\n`;
-            texto += `👤 *Cliente:* ${nombre}\n`;
-            texto += `📍 *Dirección:* ${dir}\n`;
-            if(gps) texto += `🗺️ *Ubicación GPS:* ${gps}\n`;
-            texto += `📱 *Celular:* ${cel}\n`;
-            texto += `💳 *Forma de Pago:* ${pago}\n`;
-            texto += `----------------------------------\n`;
-            texto += `*DETALLE DEL PEDIDO:*\n`;
+            let msg = `🍔 *PEDIDO REKE FOOD* 🍔\n`;
+            msg += `----------------------------------\n`;
+            msg += `👤 *Cliente:* ${nombre}\n`;
+            msg += `📍 *Dirección:* ${direccion}\n`;
+            if(document.getElementById('gps_val').value) msg += `🗺️ *GPS:* ${document.getElementById('gps_val').value}\n`;
+            msg += `💳 *Pago:* ${document.getElementById('pago').value}\n`;
+            msg += `----------------------------------\n`;
 
             let total = 0;
-            productos.forEach(p => {
-                if(carrito[p.id] > 0) {
-                    let sub = (carrito[p.id] * p.precio);
-                    texto += `✅ ${carrito[p.id]}x ${p.nombre} ($${sub.toLocaleString()})\n`;
-                    total += sub;
-                }
-            });
+            for (let cat in carta) {
+                carta[cat].forEach(p => {
+                    if(pedido[p.id] > 0) {
+                        let sub = pedido[p.id] * p.p;
+                        msg += `✅ ${pedido[p.id]}x ${p.n} ($${sub.toLocaleString()})\n`;
+                        total += sub;
+                    }
+                });
+            }
 
-            if(total === 0) return alert("El carrito está vacío.");
+            if(total === 0) return alert("El pedido está vacío");
 
-            texto += `----------------------------------\n`;
-            texto += `💰 *TOTAL A PAGAR: $${total.toLocaleString()}*\n`;
-            texto += `----------------------------------\n`;
-            texto += `🔎 *Observaciones:* ${obs || 'Sin observaciones'}\n\n`;
-            texto += `🚀 _Desarrollada por App Vibras Positivas_`;
+            msg += `----------------------------------\n`;
+            msg += `💰 *TOTAL A PAGAR: $${total.toLocaleString()}*\n`;
+            msg += `----------------------------------\n`;
+            msg += `📝 *Obs:* ${document.getElementById('obs').value || 'Ninguna'}\n\n`;
+            msg += `🚀 _App Vibras Positivas Derechos de Autor_`;
 
-            const url = `https://wa.me/573207293667?text=${encodeURIComponent(texto)}`;
-            window.open(url, '_blank');
+            window.open(`https://wa.me/573207293667?text=${encodeURIComponent(msg)}`, '_blank');
         }
 
-        cargarMenu();
+        render();
     </script>
 </body>
 </html>
